--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-  <div class="page">
-    <div class="header">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-        <div class="header__lang-links">
-          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
-          <a class="header__lang-link" href="#">En</a>
-        </div>
+<body class="page">
+  <header class="header">
+    <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
+    <div class="header__lang-links">
+      <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+      <a class="header__lang-link" href="#">En</a>
     </div>
+  </header>
+  <main>
     <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
+      <h1 class="lead__title">Путешествия по&#160;России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="нижняя полка">
       <p class="lead__caption">ваша полка — верхняя</p>
@@ -60,6 +60,8 @@
           <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
         </div>
+      </div>
+      <div class="places__place">
         <h2 class="places__title">Кольский</h2>
         <div class="places__website">
           <p class="places__url-heading">URL</p>
@@ -70,6 +72,8 @@
           <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
         </div>
+      </div>
+      <div class="places__place">
         <h2 class="places__title">Алтай</h2>
         <div class="places__website">
           <p class="places__url-heading">URL</p>
@@ -80,6 +84,8 @@
           <p class="places__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
           <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
+      </div>
+      <div class="places__place">
         <h2 class="places__title">Зимний Байкал</h2>
         <div class="places__website">
           <p class="places__url-heading">URL</p>
@@ -90,6 +96,8 @@
         <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
         <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
+      </div>
+      <div class="places__place">
         <h2 class="places__title">Карелия</h2>
         <div class="places__website">
           <p class="places__url-heading">URL</p>
@@ -103,21 +111,21 @@
     </section>
     <section class="cover">
       <a class="cover__title-subtitle" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <h2 class="cover__title">До&#160;Байкала «на&#160;собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
-      <div class="cover__overlay"></div>
-      <img class="cover__background" src="./images/cover-trains.jpg" alt="Поезда">
     </section>
-    <footer class="footer">
+  </main>
+  <footer class="footer">
+    <nav class="footer__nav">
       <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
       <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
       <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
       <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
       <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
-      <p class="footer__copyright">&copy; 2022. Наташа Евдокименко</p>
-    </footer>
-  </div>
+    </nav> 
+    <p class="footer__copyright">&copy; 2022. Наташа Евдокименко</p>
+  </footer>
 </body>
 </html>
   
